--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2016-01-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isInterface.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isLocalClass.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isMemberClass.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isPrimitive.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isSynthetic.java:
+	Updated.
+
 2016-01-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsupportedClassVersionError/TryCatch.java:
