--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-01-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/InstanceOf.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getConstructors.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getDeclaredMethods.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getFields.java:
+	Updated.
+
 2016-01-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isInterface.java:
