--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-01-11  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getAnnotation.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getAnnotations.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getClasses.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getComponentType.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getConstructor.java:
+	Added another six tests for the UnsupportedClassVersionError.
+
 2016-01-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getDeclaredField.java:
