--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2016-01-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isAnnotation.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isArray.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isEnum.java:
+	* testlet/java/lang/UnsupportedClassVersionError/classInfo/isInstance.java:
+	Updated.
+
 2016-01-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getInterfaces.java:
