--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2016-01-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Math/classInfo/getAnnotation.java:
+	* testlet/java/lang/Math/classInfo/getAnnotations.java:
+	* testlet/java/lang/Math/classInfo/getCanonicalName.java:
+	* testlet/java/lang/Math/classInfo/getClasses.java:
+	New tests idded into java.lang.Math.
+
 2016-01-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsupportedClassVersionError/classInfo/getDeclaredAnnotations.java:
