--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2016-02-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/java/lang/Math/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/Math/classInfo/getDeclaredMethods.java:
+	* testlet/java/lang/Math/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/Math/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/Math/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/Math/classInfo/getEnclosingMethod.java:
+	New tests idded into java.lang.Math.
+
+2016-02-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/Math/classInfo/getComponentType.java:
 	* testlet/java/lang/Math/classInfo/getConstructor.java:
 	* testlet/java/lang/Math/classInfo/getConstructors.java:
