--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-02-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Math/classInfo/getField.java:
+	* testlet/java/lang/Math/classInfo/getFields.java:
+	* testlet/java/lang/Math/classInfo/getInterfaces.java:
+	* testlet/java/lang/Math/classInfo/getMethod.java:
+	* testlet/java/lang/Math/classInfo/getMethods.java:
+	* testlet/java/lang/Math/classInfo/getModifiers.java:
+	Six new tests added into java.lang.Math.
+
 2016-02-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Math/classInfo/isInterface.java:
