--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-03-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ProcessBuilder/classInfo/getAnnotation.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getAnnotations.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getConstructor.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getConstructors.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getField.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getFields.java:
+	Added six tests into ProcessBuilder/classInfo.
+
 2016-02-16  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ProcessBuilder/classInfo/isInstance.java:
