--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-03-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ProcessBuilder/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getDeclaredField.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/ProcessBuilder/classInfo/getDeclaredMethods.java:
+	Added six tests into ProcessBuilder/classInfo.
+
 2016-03-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ProcessBuilder/classInfo/getAnnotation.java:
