--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-03-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Package/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/Package/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/Package/classInfo/getField.java:
+	* testlet/java/lang/Package/classInfo/getFields.java:
+	* testlet/java/lang/Package/classInfo/getMethod.java:
+	* testlet/java/lang/Package/classInfo/getMethods.java:
+	Added six new tests for Package class.
+
 2016-03-23  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Package/classInfo/getDeclaredField.java:
