--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2016-04-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Runtime/classInfo/InstanceOf.java:
+	* testlet/java/lang/Runtime/classInfo/getAnnotation.java:
+	* testlet/java/lang/Runtime/classInfo/getAnnotations.java:
+	* testlet/java/lang/Runtime/classInfo/getCanonicalName.java:
+	* testlet/java/lang/Runtime/classInfo/getClasses.java:
+	New tests added for Runtime class.
+
 2016-03-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Package/classInfo/getDeclaredAnnotations.java:
