--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-04-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Runtime/classInfo/getComponentType.java:
+	* testlet/java/lang/Runtime/classInfo/getConstructor.java:
+	* testlet/java/lang/Runtime/classInfo/getConstructors.java:
+	* testlet/java/lang/Runtime/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/Runtime/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/Runtime/classInfo/getDeclaredConstructors.java:
+	Six new tests added for Runtime class.
+
 2016-04-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Runtime/classInfo/InstanceOf.java:
