--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2016-04-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Runtime/classInfo/isAnnotation.java:
+	* testlet/java/lang/Runtime/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/Runtime/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/Runtime/classInfo/isArray.java:
+	* testlet/java/lang/Runtime/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/Runtime/classInfo/isEnum.java:
+	Six new tests added for Runtime class.
+
 2016-04-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Runtime/classInfo/isInstance.java:
